# ntfy2clip

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.zig  build.zig.zon  go.mod
cmd/n2c/: main.go
internal/clipboard/: clipboard.go  clipboard_darwin.go  clipboard_linux.go  clipboard_windows.go
internal/config/: config.go
internal/websocket/: websocket.go
src/: client.rs  main.zig
